// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`css-loader@6 default options 1`] = `
"export const foo: string;
declare const CSS_bar_baz: string;
export { CSS_bar_baz as "bar-baz" };
export const composed: string;
"
`;

exports[`css-loader@6 localsConvention asIs 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@6 localsConvention camelCase 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    barBaz: string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@6 with banner 1`] = `
"// autogenerated by typings-for-css-modules-loader
export const foo: string;
declare const CSS_bar_baz: string;
export { CSS_bar_baz as "bar-baz" };
export const composed: string;
"
`;

exports[`css-loader@6 with legacy cjs format 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@6 with locals export disabled 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss;

export = ExampleCssModule;
"
`;

exports[`css-loader@6 with no formatter 1`] = `
"export const foo: string;
declare const CSS_bar_baz: string;
        export { CSS_bar_baz as "bar-baz" };
export const composed: string;"
`;

exports[`css-loader@6 with prettier 1`] = `
"export const foo: string;
declare const CSS_bar_baz: string;
export { CSS_bar_baz as "bar-baz" };
export const composed: string;
"
`;

exports[`css-loader@6 with sourcemap 1`] = `
"export const foo: string;
declare const CSS_bar_baz: string;
export { CSS_bar_baz as "bar-baz" };
export const composed: string;
"
`;

exports[`css-loader@latest default options 1`] = `
"export const foo: string;
declare const CSS_bar_baz: string;
export { CSS_bar_baz as "bar-baz" };
export const composed: string;
"
`;

exports[`css-loader@latest localsConvention asIs 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@latest localsConvention camelCase 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    barBaz: string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@latest with banner 1`] = `
"// autogenerated by typings-for-css-modules-loader
export const foo: string;
declare const CSS_bar_baz: string;
export { CSS_bar_baz as "bar-baz" };
export const composed: string;
"
`;

exports[`css-loader@latest with legacy cjs format 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@latest with locals export disabled 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss;

export = ExampleCssModule;
"
`;

exports[`css-loader@latest with no formatter 1`] = `
"export const foo: string;
declare const CSS_bar_baz: string;
        export { CSS_bar_baz as "bar-baz" };
export const composed: string;"
`;

exports[`css-loader@latest with prettier 1`] = `
"export const foo: string;
declare const CSS_bar_baz: string;
export { CSS_bar_baz as "bar-baz" };
export const composed: string;
"
`;

exports[`css-loader@latest with sourcemap 1`] = `
"export const foo: string;
declare const CSS_bar_baz: string;
export { CSS_bar_baz as "bar-baz" };
export const composed: string;
"
`;
